[package]
name = "pam_luksresume"
version = "0.0.1"
authors = [ "raphael.catolino@gmail.com" ]

[[bin]]
name = "pam_luksresume_helper"

[lib]
name = "pam_luksresume"
crate-type = ["dylib"]

[dependencies]
libc = "^0.2.13"

[profile.dev]
opt-level = 0
debug = true
lto = true

[profile.release]
opt-level = 3
debug = false
lto = true
